
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_4__ TYPE_2__ ;
typedef struct TYPE_3__ TYPE_1__ ;


struct TYPE_4__ {int id; char* desc; } ;
struct TYPE_3__ {int id; char* desc; int addr; } ;


 int printf (char*,...) ;
 int prog_info () ;
 TYPE_2__* shellcode_list ;
 TYPE_1__* target_list ;

__attribute__((used)) static void
usage (const char *prog)
{
    int i;

    prog_info ();

    printf ("Usage:\n");
    printf ("  [-] %s -t <target> -s <shellcode> -d <dest ip> "
     "-h <host> -p <port>\n"
     "  [-] %s -a <addr>   -s <shellcode> -d <dest ip> "
     "-h <host> -p <port>\n", prog, prog);

    printf ("\n");

    printf ("Target:\n");
    for (i=0; target_list[i].id != -1; i++)
    {
 printf ("  [-] %d. %s, addr: 0x%x\n",
  target_list[i].id, target_list[i].desc, target_list[i].addr);
    }

    printf ("\n");

    printf ("Shellcode:\n");
    for (i=0; shellcode_list[i].id != -1; i++)
    {
 printf ("  [-] %d. %s\n",
  shellcode_list[i].id,
  shellcode_list[i].desc);
    }

    printf ("\n");

    printf ("Info:\n");
    printf ("  [-] 1. When using connectback shellcode, you must specify\n");
    printf ("  [-]    the host to receive the connection (-h).\n");
    printf ("\n");
    printf ("  [-] 2. When using portbind shellcode, the option (-h) will \n");
    printf ("  [-]    have no effect.\n");

    printf ("\n");
}
